- 버전정보 표시 등 UI 개선 - 일부 파일명 등 개선 등

--- a/docs/01_프로젝트 구조도.md
+++ b/docs/01_프로젝트 구조도.md
@@ -31,7 +31,7 @@ HAWKEYE/
 │       ├── image.js
 │       ├── validators.js
 │       ├── inuix.hawkeye-bak.js
-│       └── inuix.hawkeye.js
+│       └── main.js
 ├── .gitignore
 ├── index.html
 ├── package-lock.json
