--- a/docs/01_프로젝트 구조도.md
+++ b/docs/01_프로젝트 구조도.md
@@ -1,4 +1,5 @@
-# 디렉토리 구조
+# HAWKEYE 프로젝트 구조
+
 ```plaintext
 HAWKEYE/
 ├── demos/
@@ -18,6 +19,8 @@ HAWKEYE/
 │   │   ├── HawkeyeCore.js
 │   │   ├── StateManager.js
 │   │   └── VisibilityManager.js
+│   ├── inuix.hawkeye-bak.js
+│   ├── main.js
 │   ├── styles/
 │   │   └── main.scss
 │   ├── ui/
@@ -29,9 +32,7 @@ HAWKEYE/
 │   │   └── UIManager.js
 │   └── utils/
 │       ├── image.js
-│       ├── validators.js
-│       ├── inuix.hawkeye-bak.js
-│       └── main.js
+│       └── validators.js
 ├── .gitignore
 ├── index.html
 ├── package-lock.json
@@ -40,28 +41,45 @@ HAWKEYE/
 └── webpack.config.js
 ```
 
+## 디렉토리 설명
+1. **demos/**: 데모 및 예제 파일
+   - example1.html: 데모 페이지
+   - libs/: 외부 라이브러리 (moveable.min.js)
 
-1. **config/**
-   - constants.js: 앱 전반에서 사용되는 상수 정의
-   - defaultConfig.js: 기본 설정값 (도메인, URL 패턴 등)
-   - messages.js: 에러/로그 메시지 정의
+2. **dist/**: 배포용 빌드 파일
+   - inuix.hawkeye.min.js: 최종 번들링된 배포 파일
 
-2. **core/**
-   - HawkeyeCore.js: 메인 애플리케이션 로직
-   - StateManager.js: 상태 관리 (IndexedDB, localStorage)
-   - VisibilityManager.js: 노출 조건 관리 (URL, 도메인, 브랜치 체크)
+3. **src/**: 소스 코드
+   - **config/**: 설정 관련 파일
+     - defaultConfig.js: 앱의 기본 설정값 정의
+     - keyboardConstants.js: 키보드 관련 상수 및 단축키 정의
+   
+   - **core/**: 핵심 로직
+     - EventManager.js: 이벤트 핸들링 및 관리
+     - HawkeyeCore.js: 메인 애플리케이션 로직
+     - StateManager.js: 상태 관리 (IndexedDB, localStorage)
+     - VisibilityManager.js: 노출 조건 관리 (URL, 도메인, 브랜치 체크)
+   
+   - **styles/**: 스타일 파일
+     - main.scss: 메인 스타일시트
+   
+   - **ui/**: 사용자 인터페이스 관련
+     - components/
+       - ImageOverlay.js: 이미지 오버레이 컴포넌트
+       - MoveableManager.js: 이동 가능한 요소 관리 컴포넌트
+     - templates/
+       - toolbar.js: 툴바 UI 템플릿
+     - UIManager.js: UI 이벤트와 렌더링 전반 관리
+   
+   - **utils/**: 유틸리티 함수
+     - image.js: 이미지 처리 관련 유틸리티
+     - validators.js: 입력값 검증 유틸리티
+   
+   - inuix.hawkeye-bak.js: 백업 파일
+   - main.js: 애플리케이션 진입점
 
-3. **ui/**
-   - components/: UI 컴포넌트 모듈
-   - templates/: HTML 템플릿
-   - UIManager.js: UI 이벤트와 렌더링 관리
-
-4. **utils/**
-   - dom.js: DOM 조작 헬퍼 함수
-   - image.js: 이미지 처리 관련 유틸리티
-   - storage.js: 스토리지 관련 유틸리티
-   - validators.js: 입력값 검증 유틸리티
-
-5. **styles/**
-   - components/: 컴포넌트별 스타일
-   - 변수, 믹스인, 메인 스타일시트
+4. **루트 디렉토리 파일**
+   - index.html: 메인 HTML 파일
+   - package.json: 프로젝트 설정 및 의존성
+   - webpack.config.js: 웹팩 설정 파일
+   - README.md: 프로젝트 문서
